[gd_scene load_steps=4 format=3 uid="uid://c4oq36js5sr7o"]

[ext_resource type="FontFile" uid="uid://bo1jnolgp5jx7" path="res://assets/font/polarisfont-Regular222.otf" id="2_1lf5u"]
[ext_resource type="Script" uid="uid://cnal22xx3rsnn" path="res://ui/notifications/announcement.gd" id="3_4ko16"]
[ext_resource type="AudioStream" uid="uid://di1cpkakgldhf" path="res://assets/audio/sfx/mumble.ogg" id="4_bwnvb"]

[node name="Notifications" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("3_4ko16")

[node name="Items" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -38.5
offset_top = -25.0
offset_right = 38.5
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "test"
theme_override_constants/separation = 12

[node name="Timeout" type="Timer" parent="Items"]
wait_time = 2.5
one_shot = true

[node name="Commentary" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
grow_horizontal = 2
grow_vertical = 0

[node name="Announcement" type="Label" parent="Commentary"]
z_index = 2
layout_mode = 2
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_1lf5u")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Commentary"]
position = Vector2(0, 206)
stream = ExtResource("4_bwnvb")

[node name="Timeout" type="Timer" parent="Commentary"]
wait_time = 2.5
one_shot = true

[node name="Autochatter" type="Timer" parent="Commentary"]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Items/Timeout" to="." method="_on_items_timeout"]
[connection signal="timeout" from="Commentary/Timeout" to="." method="_on_commentary_timeout"]
[connection signal="timeout" from="Commentary/Autochatter" to="." method="_on_autochatter_timeout"]
