[gd_scene load_steps=4 format=3 uid="uid://cquia4fh0ma84"]

[ext_resource type="FontFile" uid="uid://bo1jnolgp5jx7" path="res://assets/font/polarisfont-Regular222.otf" id="1_ix8gp"]
[ext_resource type="Script" uid="uid://cnal22xx3rsnn" path="res://ui/notifications/announcement.gd" id="2_0eyw4"]
[ext_resource type="AudioStream" uid="uid://di1cpkakgldhf" path="res://assets/audio/sfx/mumble.ogg" id="3_cc6fj"]

[node name="Announcement" type="Label"]
z_index = 2
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("1_ix8gp")
theme_override_font_sizes/font_size = 32
text = "\"So many items!\""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_0eyw4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cc6fj")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
